# release_candidates_rule

backend_rules/: .env  .gitignore  README.md  auth_routes.py  banco.db  dependecy.py  main.py  models.py  pyproject.toml  rules_routes.py  schema.py
backend_rules/alembic/: env.py
backend_rules/alembic/versions/: e4c06a782ace_initial_migration.py
front/: package-lock.json
front/release_candidates_rules/: index.html  package-lock.json  package.json
front/release_candidates_rules/src/: index.css  main.jsx
front/release_candidates_rules/src/pages/home/: index.jsx  style.css
front/release_candidates_rules/src/pages/login/: index.jsx  style.css
front/release_candidates_rules/src/pages/rules/: index.jsx
front/release_candidates_rules/src/services/: api.js
